--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,6 +1,10 @@
-run:
-  runtime-version: 3.11
-  pre-run:  
-    - pip3 install pipenv
-    - pipenv install
-  command: pipenv run streamlit run app.py --server.port 9000 --logger.level info --server.scriptHealthCheckEnabled true --server.headless true
+version: 1.0
+runtime: python311 
+build:
+  commands:
+    build:
+      - pip install streamlit
+run: 
+  command: streamlit run app.py --server.port 9000 --logger.level info --server.scriptHealthCheckEnabled true --server.headless true 
+  network:
+    port: 9000
