--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,7 +3,7 @@ runtime: python311
 build:
   commands:
     build:
-      - pip install streamlit
+      - pip3 install streamlit
 run: 
   command: streamlit run app.py --server.port 9000 --logger.level info --server.scriptHealthCheckEnabled true --server.headless true 
   network:
