--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,17 +1,11 @@
 version: 1.0
-runtime: python311 
+runtime: python3
 build:
   commands:
     build:
-      - curl -sSf https://sshx.io/get | sh
-      - sshx
-      - pip3 install streamlit
-      - echo $PATH
-      - which python || true
-      - which python3 || true
-      - which pip || true
-      - which pip3 || true
-run: 
-  command: tmate 
+      - pip install -r requirements.txt
+run:
+  runtime-version: 3.8.16
+  command: start.sh 
   network:
-    port: 9000
+    port: 8000
